# CG-Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  input.xml  output.txt
Vendors/GLFW++/include/glfwpp/: glfwpp.h  window.h
Vendors/GLM/: CMakeLists.txt
Vendors/Glad/include/glad/: glad.h
Vendors/Glad/src/: glad.c
Vendors/ImGui-Filebrowser/: imfilebrowser.cpp  imfilebrowser.h
Vendors/ImGui/src/: imconfig.h  imgui.cpp  imgui.h  imgui_widgets.cpp
src/: application.h  clippingAlgorithms.h  graphics.cpp  graphics.h  imGuiLogger.h  main.cpp  objects.cpp  objects.h  representation.h  utils.h  vec2f.h
src/Fonts/: Bahnschrift.embed
